// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid-const.js [babel] format 1`] = `
"'Const declarations' require an initialization value. (1:10)
> 1 | const foo;
    |          ^
  2 |"
`;

exports[`invalid-const.js [espree] format 1`] = `
"Unexpected token ; (1:10)
> 1 | const foo;
    |          ^
  2 |"
`;

exports[`invalid-const.js [meriyah] format 1`] = `
"[1:10]: Missing initializer in const declaration (1:10)
> 1 | const foo;
    |          ^
  2 |"
`;
